--- a/src/components/gratitude/Gratitude.css
+++ b/src/components/gratitude/Gratitude.css
@@ -80,8 +80,7 @@
 
   .dm-grt-universe-image {
     width: 100%;
-    max-width: 550px;
-    height: 600px;
+    height: 100%;
     border-radius: 15px;
     margin-bottom: 30px;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
