--- a/src/components/elder/Elder.css
+++ b/src/components/elder/Elder.css
@@ -24,7 +24,7 @@
   text-align: center;
   padding: 20px;
   margin: 40px;
-  color: rgb(169, 215, 19);
+  color: forestgreen;
   font-weight: bold;
   letter-spacing: 1px;
 }
