--- a/src/components/womenempowerment/Womenempowerment.css
+++ b/src/components/womenempowerment/Womenempowerment.css
@@ -18,7 +18,7 @@
 }
 
 .women-dm-header-wrap {
-     margin: 30px 20px;
+     margin: 5px 20px 15px 20px;
   }
  .women-header-1 {
     text-align: center;
@@ -50,6 +50,7 @@
 .women-image img {
   width: 100%;
   max-width: 400px;
+  height: 300px;
   border-radius: 10px;
   object-fit: fill;
 }
@@ -87,7 +88,7 @@
 .women-section {
   margin-top: 30px;
   background: #fff;
-  padding: 25px;
+  padding: 20px 0 20px 0;
   border-radius: 10px;
   box-shadow: 0 4px 14px rgba(0, 0, 0, 0.05);
 }
@@ -132,7 +133,7 @@
 
 .women-image-row img {
   width: 300px;
-  height: 300px;
+  height: 350px;
   object-fit: fill;
   border-radius: 25px;
   transition: transform 0.3s ease;
@@ -150,7 +151,7 @@
   flex-wrap: wrap;
   background: #b20a2c;
   color: #fff;
-  padding: 40px 20px;
+  padding: 80px 20px;
   text-align: center;
 }
 
