--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -662,6 +662,7 @@ html {
   padding: 6px 12px;
   margin-bottom: 6px;
   color: #cdefff;
+  line-height:1.8;
 }
 .footer .english {
   font-size: 1.6rem; /* increase English quote size slightly */
