--- a/src/components/wealth/Wealth.css
+++ b/src/components/wealth/Wealth.css
@@ -84,6 +84,7 @@ body {
 .wealthy-hero-grid {
   display: grid;
   place-items: center;
+  background-color: darkorange;
 }
 
 .wealthy-portrait-card {
